tests/error/missing_im.gw
// [contains] missing imaginary component of complex value...
 #(0);
